--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -2,9 +2,9 @@
 
 {% load static %}
 {% block style%}
-  <!-- <link rel="stylesheet" type="text/css" href="{% static 'recommendapp/index.css' %}"/> -->
-  <!-- <link rel="stylesheet" type="text/css" media = "(max-width: 480px)" href="{% static 'recommendapp/mobile_index.css' %}"/> -->
-  <link rel="stylesheet" type="text/css" href="{% static 'recommendapp/signup_login.css' %}" />
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'styles/index.css' %}"/> -->
+  <!-- <link rel="stylesheet" type="text/css" media = "(max-width: 480px)" href="{% static 'styles/mobile_index.css' %}"/> -->
+  <link rel="stylesheet" type="text/css" href="{% static 'styles/signup_login.css' %}" />
 {% endblock %}
 
 {% block content %}
