--- a/accounts/templates/userinfo.html
+++ b/accounts/templates/userinfo.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html'%} {% load static %} {% block style%}
-<link rel="stylesheet" type="text/css" href="{% static 'recommendapp/index.css' %}" />
-<link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'recommendapp/mobile_index.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'styles/index.css' %}" />
+<link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'styles/mobile_index.css' %}" />
 {% endblock %} {% block content %}
 <section class="userinfo-section">
   <h1>{{ user.username }}</h1>
