--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -12,8 +12,8 @@
     <script src="https://kit.fontawesome.com/f16496386e.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="{% static 'recommendapp/layout.css' %}" />
-    <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'recommendapp/mobile_layout.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/layout.css' %}" />
+    <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'styles/mobile_layout.css' %}" />
     <link rel="icon" href="data:," />
     {%block style%} {%endblock%}
   </head>
