--- a/runup_app/templates/sub_content.html
+++ b/runup_app/templates/sub_content.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html'%} {% load static %} {% block style%}
-<link rel="stylesheet" type="text/css" href="{% static 'recommendapp/sub.css' %}" />
-<link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'recommendapp/mobile_sub.css' %}" />
-<!-- <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'recommendapp/mobile_index.css' %}" /> -->
+<link rel="stylesheet" type="text/css" href="{% static 'styles/sub.css' %}" />
+<link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'styles/mobile_sub.css' %}" />
+<!-- <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'styles/mobile_index.css' %}" /> -->
 {% endblock style %} {%block content%}
 
 <div class="container">
