--- a/runup_app/static/styles/styleCatch.css
+++ b/runup_app/static/styles/styleCatch.css
@@ -91,7 +91,20 @@ img {
   padding: 0 20px;
   font-size: 14px;
   margin-bottom: 10px;
-  align-self: flex-start;
+  /* align-self: flex-start; */
+  letter-spacing: -0.04em;
+  text-align: center;
+}
+
+.styleCatch-desc-1 {
+  display: block;
+  font-size: 12px;
+  /* margin-bottom: 3px; */
+}
+
+.styleCatch-desc-2 {
+  display: block;
+  font-size: 11px;
 }
 
 /* styleCatch-images section */
