--- a/runup_app/static/styles/brandrank.css
+++ b/runup_app/static/styles/brandrank.css
@@ -7,21 +7,55 @@
   padding: 0 20px;
 }
 
-.brandrank-title {
-  font-size: 14px;
+.brandrank-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 7px;
 }
 
-.brand-list {
+.brandrank-title {
+  font-size: 17px;
+  font-weight: 500;
+}
+
+.brandrank-title-box {
   display: flex;
   align-items: center;
 }
 
-.brand-list-item {
-  /* display */
+.brandrank-title-likes,
+.brandrank-title-views {
+  display: block;
 }
 
-.brand-list-name {
+.brandrank-title-likes {
   margin-right: 5px;
+}
+
+.brand-list {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+}
+
+.brand-list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px;
+  border-bottom: 1px solid #e5e5e5;
+  margin-bottom: 7px;
+  /* border-radius: 100px; */
+}
+
+.brand-list-item dt {
+  margin-right: 3px;
+}
+
+.brand-list-name dd {
+  font-size: 12px;
+  font-weight: 600;
 }
 
 .brand-list-name,
