--- a/runup_app/templates/best.html
+++ b/runup_app/templates/best.html
@@ -3,7 +3,7 @@
 
 {% block style%}
 <link rel="stylesheet" type="text/css" href="{% static 'recommendapp/index.css' %}" />
-<link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'recommendapp/mobile_index.css' %}" />
+<link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'styles/mobile_index.css' %}" />
 {% endblock %} 
 
 {% block content %}
