--- a/runup_app/templates/sale.html
+++ b/runup_app/templates/sale.html
@@ -8,18 +8,30 @@
 
 {% block content %}
     세일페이지
+  <div class="infinite-container">
     {% for prod in contents %}
+    <div class="infinite-item">
       <div class="box">
         <div class="img_box">
           <a onclick="animation('{% url 'product' prod.id %}')">
             <img src="{{ prod.img_url }}" alt="image" class="image" />
           </a>
         </div>
-        <div class="info">
-          <b>{{ prod.brand.name_kr }}</b>
-          <div class="price">{% load humanize %} {{prod.origin_price|intcomma}}원</div>
-          할인률{{prod.discount_rate}}%          
+        <div class="product-container">
+          <div class="info">
+            <b>{{ prod.brand.name_kr }}</b>
+            <div class="price">{% load humanize %} {{prod.origin_price|intcomma}}원</div>
+          </div>
+          <!-- onclick="like_ajax('{% url 'like' prod.id %}', {{ prod.id }} )" -->
+          <a class="product-image-box">
+            <button class="heart-button" type="button"></button>
+          </a>
         </div>
       </div>
+    </div>
     {% endfor %}
+  </div>
+  {% if contents.has_next %}
+  <a class="infinite-more-link" href="?page={{ contents.next_page_number }}&s_ctg={{s_ctg.id}}">More</a>
+  {% endif %}
 {% endblock %}
