--- a/runup_app/templates/likes.html
+++ b/runup_app/templates/likes.html
@@ -1,17 +1,34 @@
 {% extends 'layout.html'%} {% load static %} {% block style%}
 <link rel="stylesheet" type="text/css" href="{% static 'styles/index.css' %}" />
 <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'styles/mobile_index.css' %}" />
-{% endblock %} {% block content %} 내가 좋아요 한 상품<br /><br />
-{% for prod in contents %}
-<div class="box">
-  <div class="img_box">
-    <a onclick="animation('{% url 'product' prod.id %}')">
-      <img src="{{ prod.img_url }}" alt="image" class="image" />
-    </a>
+{% endblock %} 
+
+{% block content %}
+    내가 좋아요 한 상품
+  <div class="infinite-container">
+    {% for prod in contents %}
+    <div class="infinite-item">
+      <div class="box">
+        <div class="img_box">
+          <a onclick="animation('{% url 'product' prod.id %}')">
+            <img src="{{ prod.img_url }}" alt="image" class="image" />
+          </a>
+        </div>
+        <div class="product-container">
+          <div class="info">
+            <b>{{ prod.brand.name_kr }}</b>
+            <div class="price">{% load humanize %} {{prod.origin_price|intcomma}}원</div>
+          </div>
+          <!-- onclick="like_ajax('{% url 'like' prod.id %}', {{ prod.id }} )" -->
+          <a class="product-image-box">
+            <button class="heart-button" type="button"></button>
+          </a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
   </div>
-  <div class="info">
-    <b>{{ prod.brand.name_kr }}</b>
-    <div class="price">{% load humanize %} {{prod.origin_price|intcomma}}원</div>
-  </div>
-</div>
-{% endfor %} {% endblock %}
+  {% if contents.has_next %}
+  <a class="infinite-more-link" href="?page={{ contents.next_page_number }}&s_ctg={{s_ctg.id}}">More</a>
+  {% endif %}
+{% endblock %}
