fix member text

--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -4,7 +4,7 @@
 {% endblock %} {% block content %}
 <section class="signup">
   <div class="signup-header">
-    <h1 class="signup-title">RUNUP 맴버 가입</h1>
+    <h1 class="signup-title">RUNUP 멤버 가입</h1>
     <p class="signup-desc">
       맴버가 되어 Runup이 제공하는 <br />
       최고의 제품과 혜택을 만나보세요.
