--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -14,7 +14,7 @@
 </div>
 {% endif %}
 <section class="login-section">
-  <h1 class="login-title">RUNUP 맴버 로그인</h1>
+  <h1 class="login-title">RUNUP 멤버 로그인</h1>
   <form class="login-form" action='{% url 'login' %}{% if next %}?next={{ next }}{% endif %}' method='POST'>
     {% csrf_token %}
     <label class="sr-only" for="id">ID</label>
@@ -25,7 +25,7 @@
       <input id="keep-login" name="keep-login" type="checkbox">
       <label for="keep-login">로그인 유지하기</label>
     </div> -->
-    <button class="login-button" type='submit'>RUNUP 맴버 로그인</button>
+    <button class="login-button" type='submit'>RUNUP 멤버 로그인</button>
     <input type="hidden" name='next' value="{{ request.GET.next }}">
   </form>
   <div class="login-subtext">
