--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -112,7 +112,7 @@
             {% else %}
             <dt class="sr-only">회원가입 & 로그인</dt>
             <dd class="sign-up">
-              <a href="{% url 'signup'%}">RUNUP 맴버 가입</a>
+              <a href="{% url 'signup'%}">RUNUP 멤버 가입</a>
             </dd>
             <dd class="sign-in">
               <a href="{% url 'login'%}">RUNUP 로그인</a>
