--- a/runup_app/static/styles/mobile_layout.css
+++ b/runup_app/static/styles/mobile_layout.css
@@ -78,10 +78,6 @@ input:focus {
   top: 0;
   left: 0;
   z-index: 1;
-  /* box-shadow */
-  -webkit-box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.2);
-  -moz-box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.2);
-  box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.2);
 }
 
 .header-title {
@@ -139,10 +135,6 @@ input:focus {
   align-items: center;
   width: 100%;
   padding-bottom: 9px;
-  /* box-shadow */
-  -webkit-box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.2);
-  -moz-box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.2);
-  box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.2);
 }
 
 .header-menu a {
@@ -208,7 +200,7 @@ input:focus {
   display: flex;
   flex-direction: column;
   font-size: 20px;
-  /* padding: 20px 0; */
+  padding: 0 20px;
   width: 100%;
   min-height: 100vh;
   background-color: #fff;
@@ -233,7 +225,7 @@ input:focus {
 .myPage-menu dd {
   font-size: 13px;
   border-bottom: 1px solid #e5e5e5;
-  padding: 10px 13px;
+  padding: 10px 10px;
 }
 
 .myPage-user-box {
@@ -282,7 +274,7 @@ input:focus {
   justify-content: space-between;
   background-color: #fff;
   align-items: center;
-  padding: 11px 15px;
+  padding: 10px;
   /* margin-bottom: 1px; */
   font-size: 10px;
   border-bottom: 1px solid #e5e5e5;
@@ -320,15 +312,12 @@ input:focus {
   /* align-items: flex-end; */
   margin-bottom: 5px;
   width: 100%;
+  padding: 0 10px;
 }
 
 .sign-up {
   display: inline-block;
 }
-
-/* .sign-up::after {
-  content: "/";
-} */
 
 .sign-in {
   display: inline-block;
