--- a/runup_app/templates/main_content.html
+++ b/runup_app/templates/main_content.html
@@ -1,5 +1,4 @@
 {% extends 'layout.html'%} {% load static %} {% block style%}
-<link rel="stylesheet" type="text/css" href="{% static 'styles/index.css' %}" />
 <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'styles/mobile_index.css' %}" />
 <script src="{% static 'js/main_content.js' %}" defer></script>
 {% endblock %} {% block content %} {% comment %} {{category}} {% endcomment %}
@@ -25,7 +24,8 @@
   <div class="infinite-item">
     <div class="box">
       <div class="img_box">
-        <a onclick="animation('{% url 'product' prod.id %}')">
+        {% comment %} onclick="animation('{% url 'product' prod.id %}')" {% endcomment %}
+        <a href="{% url 'product' prod.id %}">
           <img src="{{ prod.img_url }}" alt="image" class="image" />
         </a>
       </div>
@@ -37,165 +37,22 @@
         <!-- 임의로 찜하기 버튼을 추가했습니다. 추후 수정요망 -->
         <!-- ajax로 제품의 아이디값을 보내서 컨트롤러단으로 보내게 한다 -->
         <!-- ajax: 제품을 찜했는지 안했는지 '상태'만 전달을 주고받고하여 쿠키로 저장하게 한다 -->
-        <a class="product-image-box" onclick="like_ajax('{% url 'like' prod.id %}', '{{ prod.id }}' )">
+        {% comment %}
+        <a class="product-image-box-login {{ prod.id }}" onclick="like_ajax('{% url 'like' prod.id %}', '{{ prod.id }}' )">
           <button class="heart-button" type="button"></button>
         </a>
+        {% endcomment %} {% if user.is_authenticated %}
+        <a class="product-image-box-login {{ prod.id }}">
+          <button class="heart-button" type="button"></button>
+        </a>
+        {% else %}
+        <a class="product-image-box-logout {{ prod.id }}">
+          <button class="heart-button" type="button"></button>
+        </a>
+        {% endif %}
       </div>
     </div>
   </div>
   {% endfor %}
 </div>
-{% csrf_token %}
-<script type="text/javascript">
-  const csrf_token = document.querySelector('[name=csrfmiddlewaretoken]').value;
-    {% comment %} 각 제품을 클릭하면 로드 되는 애니메이션효과를 주는 함수 {% endcomment %}
-    {% comment %} 애니메이션효과를 준 후 url로 이동한다 {% endcomment %}
-  function animation(targetUrl) {
-    var maskHeight = $(document).height();
-    var windowHeight = $(window).height();
-    var maskWidth = $(document).width();
-    var height = $(document).scrollTop();
-
-    var mask = "<div id='mask' style='position:absolute; z-index:9000; background-color:#000000; display:none; left:0; top:0;'></div>";
-    var loadingImg = "";
-    var delayTimeMillis = 1200;
-
-    loadingImg += "<div id='loadingImg' style='position:absolute; left:15%; display:none; z-index:10000;'>";
-    loadingImg += " <img src='https://mir-s3-cdn-cf.behance.net/project_modules/disp/35771931234507.564a1d2403b3a.gif'/>";
-    loadingImg += "</div>";
-
-    $("form").append(mask).append(loadingImg);
-
-    $("#mask").css({
-      width: maskWidth,
-      height: maskHeight,
-      opacity: "0.4",
-    });
-
-    $("#mask").show();
-
-    if (height == 0) {
-      $("#loadingImg").css({
-        top: windowHeight / 3,
-      });
-    } else {
-      $("#loadingImg").css({
-        top: height + windowHeight / 3,
-
-      });
-
-      $("#mask").show();
-
-      if (height == 0) {
-        $("#loadingImg").css({
-          top: windowHeight / 3,
-        });
-      } else {
-        $("#loadingImg").css({
-          top: height + windowHeight / 3,
-        });
-      }
-
-      $("#loadingImg").show();
-
-      // 실행 지연
-      setTimeout(function () {
-        location.href = targetUrl;
-      }, delayTimeMillis);
-    }
-
-    $("#loadingImg").show();
-
-    // 실행 지연
-    setTimeout(function () {
-      location.href = targetUrl;
-    }, delayTimeMillis);
-  }
-
-{% comment %} 찜하기 버튼을 누르면 회원인지 아닌지 판단하는 함수, ajax처리 {% endcomment %}
-  function like_ajax(targetUrl,prod_id) {
-    {% if user.is_authenticated %}
-      // 로그인을 했을경우 view의 like로 가서 like DB에 데이터를 추가해준다
-      alert("로그인 됨");
-      $.ajax({
-        url:targetUrl,
-        data:{},
-        method:"POST",
-        dataType:"json",
-        beforeSend: function(xhr) {
-          xhr.setRequestHeader("X-CSRFToken",csrf_token);
-        },
-        })
-      .done(function(){alert('success');})
-      .fail(function(){alert('failed');});
-    {% else %}
-      alert("로그인 안됨");
-      // 로그인이 안됐을 경우 쿠키로 저장주는 함수로 보낸다.
-      addCookie(prod_id);
-    {% endif %}
-  }
-
-
-
-{% comment %} like 쿠키를 설정해주는 함수 {% endcomment %}
-  function setCookie(cookie_name,prod_id){
-    alert('***setCookie***')
-    alert(document.cookie)
-    var cookie_value=prod_id//escape(prod_id)
-    document.cookie+=cookie_name+'='+cookie_value
-    alert(document.cookie)
-  }
-
-{% comment %} 저장된 쿠키값을 가져오는 함수 {% endcomment %}
-  function getCookie(name){
-    var cname , cval;
-    var clist = document.cookie.split(';');
-
-    for (var i = 0; i < clist.length; i++) {
-      cname = clist[i].substr(0, clist[i].indexOf('='));
-      cval = clist[i].substr(clist[i].indexOf('=') + 1);
-      cname = cname.replace(/^\s+|\s+$/g, ''); // 앞과 뒤의 공백 제거하기
-      if (cname == name) {
-        return cval; // unescape로 디코딩 후 값 리턴
-      }
-    }
-    return null;
-  }
-
-  function addCookie(id) {
-    var items = getCookie('like'); // 이미 저장된 값을 쿠키에서 가져오기
-    var maxItemNum = 20; // 최대 저장 가능한 아이템개수
-    // let expire = 1; // 쿠키값을 저장할 기간
-    if (items != null ) {
-      var item_list = items.split(',');
-      if(item_list[0] == ''){
-        var letlikes = 'like='+id;
-        document.cookie= letlikes;
-        return letlikes;
-      }
-      for(let i = 0; i< item_list.length;i++){
-        if (item_list[i] == ''+id){
-          item_list.splice(i,1);
-          if (item_list.length == 0){
-            var letlikes = 'like=';
-            document.cookie=letlikes;
-            return letlikes
-          }
-          var letlikes = 'like='+ item_list.join();
-          document.cookie=letlikes;
-          return letlikes;
-        }
-      }
-      // like페이지 로드 시 item_array이용하여 product_id 불러오기
-      item_list.push(''+id);
-      var letlikes = 'like=' + item_list.join();
-      document.cookie=letlikes;
-      return letlikes;
-    }else{
-      var letlikes = 'like='+id;
-      document.cookie= letlikes;
-      return letlikes;
-    }
-  }
-</script>
-{% endblock %}
+{% csrf_token %} {% endblock %}
