--- a/runup_app/static/styles/mobile_layout.css
+++ b/runup_app/static/styles/mobile_layout.css
@@ -3,13 +3,11 @@
   margin: 0;
 }
 
-/* html {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-} */
+html {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 body {
   font-size: 10px;
