--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="{% static 'js/mobile.js' %}" defer></script>
+    <script src="{% static 'js/longClickEvent.js' %}" defer></script>
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
     <script src="{% static 'js/infinite.min.js' %}" defer></script>
@@ -17,7 +18,7 @@
     <link rel="icon" href="data:," />
     {%block style%} {%endblock%}
   </head>
-  <body>
+  <body oncontextmenu="return false">
     {% comment %} <!-- {% url 'gender' == w / m %} --> {% endcomment %}
     <section class="desktop">
       <img src="{% static 'assets/service.png' %}" alt="service-image" />
