--- a/runup_app/templates/main_content.html
+++ b/runup_app/templates/main_content.html
@@ -24,8 +24,8 @@
   <div class="infinite-item">
     <div class="box">
       <div class="img_box">
-        {% comment %} onclick="animation('{% url 'product' prod.id %}')" {% endcomment %}
-        <a href="{% url 'product' prod.id %}">
+        {% comment %} "{% url 'product' prod.id %}" "{{prod.url}}" {% endcomment %}
+        <a class="img_box_a {{prod.id}} {{prod.url}}" href="{% url 'product' prod.id %}">
           <img src="{{ prod.img_url }}" alt="image" class="image" />
         </a>
       </div>
