--- a/runup_app/templates/main_content.html
+++ b/runup_app/templates/main_content.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html'%} {% load static %} {% block style%}
 <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'styles/mobile_index.css' %}" />
 <script src="{% static 'js/main_content.js' %}" defer></script>
+<script src="{% static 'js/main_content.js' %}" defer></script>
 {% endblock %} {% block content %} {% comment %} {{category}} {% endcomment %}
 <div class="header-menu">
   <a href="{% url 'new_page' %}">
