fix cokie issue

--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -7,7 +7,9 @@
     <script src="{% static 'js/mobile.js' %}" defer></script>
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'js/infinite.min.js' %}" defer></script>
+    <script src="{% static 'js/infinite.min.js' %}" defer></script>    
+    <script src="{% static 'js/main_content.js' %}" defer></script>
+    <script src="{% static 'js/back_event.js' %}" defer></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="https://kit.fontawesome.com/f16496386e.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
