--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -8,7 +8,8 @@
     <script src="{% static 'js/longClickEvent.js' %}" defer></script>
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'js/infinite.min.js' %}" defer></script>    
+    <script src="{% static 'js/infinite.min.js' %}" defer></script>
+    <script src="{% static 'js/main_content.js' %}" defer></script>    
     <script src="{% static 'js/back_event.js' %}" defer></script>
     <script src="{% static 'js/search.js' %}" defer></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
